* build-0.0.1.js actually generating code now..

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "license": "MIT",
   "repository": "https://github.com/BastianGanze/WGDSK",
   "devDependencies": {
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
-    "gulp-typescript": "^2.13.4"
+    "tsify": "^0.16.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   }
 }
