--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "devDependencies": {
     "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-sourcemaps": "^1.6.0",
     "tsify": "^0.16.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   }
