--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "repository": "https://github.com/BastianGanze/WGDSK",
   "devDependencies": {
-    "browserify": "^13.1.1",
+    "browserify": "^14.5.0",
     "gulp": "^3.9.1",
-    "tsify": "^2.0.3",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.7.0"
+    "tsify": "^3.0.4",
+    "typescript": "^2.6.2",
+    "vinyl-source-stream": "^1.1.1",
+    "watchify": "^3.9.0"
   }
 }
